--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-Hello World
+ <!DOCTYPE html>
+<html>
+<body>
+
+<h1>TarakoMunster's test page</h1>
+
+<a href="sketches-pages.html">Sketches</a>
+
+</body>
+</html> 
