Add chapter 2 sketches

--- a/sketches-pages.html
+++ b/sketches-pages.html
@@ -90,5 +90,10 @@
 	<img src="split/sketches/page_013_1900x10600-4.png" class="split-image" name="page_013_1900x10600-4.png">
 </div>
 
+<div>
+	<a href="index.html">Home</a>
+	<a href="sketches-pages-01.html">Next</a>
+</div>
+
 </body>
 </html>
